Update and rename README.md to README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# boumanggz-rebirth-therapy
+| rebirth
 
 # bouman ggz
 https://nl.wikipedia.org/wiki/Bouman_GGZ
@@ -12,8 +12,11 @@ https://en.wikipedia.org/wiki/Psychotherapy
 # bhagwan sri rajneesh
 https://nl.wikipedia.org/wiki/Bhagwan_Sri_Rajneesh
 
+# aum meditation
+https://de.zxc.wiki/wiki/AUM-Meditation
+
 # rebirth
 https://en.wikipedia.org/wiki/Rebirth_(Buddhism)
 
-# santa ckaus
+# santa claus
 https://nl.wikipedia.org/wiki/Santa_Claus_(beeld)
