--- a/README
+++ b/README
@@ -1,6 +1,7 @@
------------------
-| bemoeidictaat |
------------------
+---------------------
+| het-bemoeidictaat |
+---------------------
+
 
 # bouman ggz
 https://nl.wikipedia.org/wiki/Bouman_GGZ
